# Python

./: pyproject.toml
01_foundation/: 01_basic.py
02_field_validation/: 02_assignment.py
03_model_behaviour/: 01_main.py
04_nested_model/: 01_main.py  02_assignment.py
Data_Analytics/: 01_numpy.ipynb  02_panda.ipynb  03_plotting.ipynb  plsql and data_analytics in mysql.sql  pyproject.toml
Data_Science/: 01_mean.ipynb  02_central_tedency.ipynb  03_percentile.ipynb  06_central_limit_theorm.ipynb  pyproject.toml  salary_level.csv
Data_Science/01_Basic_math/: 01_mean.ipynb  04_shapes.ipynb  05_random_variables.ipynb  06_central_limit_theorm.ipynb  07_hypothesis_testing.ipynb
Data_Science/02_Machine_Learning/: 01_data_cleaning.ipynb  02_filling_missing_data.ipynb  03_encoding.ipynb  04_outliers.ipynb  05_feature_scaling.ipynb  06_duplicate_data.ipynb  07_function_transform.ipynb  08_feature_selection.ipynb
Data_Science/03_Supervise_learning/: 01_split_train_and_test_data.ipynb  02_linear_regression_prediction_CgpaPlacement.ipynb  03_multiple_linear_regression.ipynb  04_polynomial._regression.ipynb  05_regulization_techniques.ipynb
Data_Science/04_ML_classification/: 01_logistic_regression.ipynb  02_logistic_regression_multipleInput.ipynb  03_logistic_regression_with_polynomial.ipynb  04_logistic_regression_multiclassClassification.ipynb  05_confusion.matrix.ipynb  06_imbalanced_dataset_handling.ipynb  07_nave_bais.ipynb
Data_Science/05_NL_supervised_learning/: 01_decision_tree_classification.ipynb  02_decision_tree_regression.ipynb  03_knn.ipynb  04_support_vector_machine.ipynb  05_svm_regression.ipynb  06_hyper_parameter_tranining.ipynb  07_cross_validation.ipynb
Data_Science/06_unsupervised_clustering/: 01_k-mean_clustering.ipynb  02_heirachical_aggromeratic.ipynb  03_dbscan_clustering.ipynb  04_silhouette_score.ipynb
Data_Science/07_Association_learning/: 01_apriori_algo.ipynb  02_frequency_pattern_growth_algorithm.ipynb
Data_Science/08_Ensemble_learning/: 01_maxVoting_averageVoting.ipynb  02_maxVoting_in_regression.ipynb  03_Bagging_classification.ipynb  04_Bagging_regression.ipynb
Data_Science/09_deep_learning.ipynb/: 01_single_layer_perceptron.ipynb
Deep_Learning/: 01_multiple_neural_network.ipynb  02_covoluton_neural_network.ipynb  pyproject.toml
Machine_Learning/: Salary_Data.csv  pyproject.toml  salary_level.csv
Machine_Learning/01_data_cleansing/: 01_missing_data.ipynb  02_encoding.ipynb
Numpy-Python/: 01.ipynb  02.ipynb  03.ipynb  main.py  pyproject.toml
(+24 files in other folders)
