[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "numpy<2.2.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
