[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "imblearn>=0.0",
    "keras>=3.10.0",
    "mlxtend>=0.23.4",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "tensorflow>=2.19.0",
]
